# Reader

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ineedtoknown/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pdfium_bridge.cpp
app/src/main/cpp/include/: fpdf_annot.h
app/src/main/java/com/example/ineedtoknown/: BookStore.kt  FileNameUtils.kt  LibraryScreen.kt  MainActivity.kt  PdfHelper.kt  ReaderScreen.kt  ReaderService.kt
app/src/main/java/com/example/ineedtoknown/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/reader/: AppDatabase.kt  BookDao.kt  BookEntity.kt  BookStore.kt  FileNameUtils.kt  LibraryScreen.kt  MainActivity.kt  NativePdfEngine.kt  PdfHelper.kt  ReaderScreen.kt  ReaderService.kt
app/src/main/java/com/example/reader/ui/theme/: Color.kt  Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ineedtoknown/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
